fixing authors on mobile

--- a/themes/digital.gov/src/uswds/scss/_authors-list-short.scss
+++ b/themes/digital.gov/src/uswds/scss/_authors-list-short.scss
@@ -9,6 +9,7 @@
 	@include u-flex('wrap');
 	.author{
 		@include u-margin(0);
+		@include u-margin-bottom('2px');
 		// @include u-margin-top(1);
 		@include u-margin-right('105');
 		@include u-padding(0);
@@ -18,7 +19,7 @@
 		@include u-text('indigo-warm-80');
 		@include u-text('medium');
 		@include u-text('no-underline');
-		@include u-font('sans', 'xs');
+		@include u-font('sans', '2xs');
 		@include at-media('tablet') {
 			@include u-font('sans', '2xs');
 		}
@@ -31,6 +32,10 @@
 				@include u-margin-bottom(0);
 				@include u-circle(3);
 			}
+		}
+		span{
+			flex: 1;
+			white-space: nowrap;
 		}
 		&:hover{
 			@include u-text('underline');
